--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    "redirects": [
+      {
+        "source": "/",
+        "destination": "/Login.html",
+        "permanent": true
+      }
     ]
   }
